Fix color management settings

The setting for disabling color management was incorrectly
described, and also activated by default. The latter was an
unintentional error in a previous commit.

BUG: 468706
FIXED-IN: 23.08